examples/pass/lazy/simple_thunk.dew
// expect: 42
// Tier: Small
def x = 40 + 2;
def main = fn { x -> stdout; };
